fix: 💄 dark mode and table/headers overflow (#2)

--- a/layouts/partials/paige/style-first.css
+++ b/layouts/partials/paige/style-first.css
@@ -19,4 +19,31 @@
     display: none;
 }
 
-#paige-title { font-size: 4rem; }
+#paige-title { font-size: min(12vw, 4rem) }
+
+@media (prefers-color-scheme: dark) {
+    #sessionize {
+        a:hover {
+            color: gray !important;
+        }
+  
+        .sz-tab-container,
+        .sz-speakers--wall .sz-speaker__name,
+        .sz-speakers--wall .sz-speaker__tagline,
+        .sz-tab-container .sz-speaker__name,
+        .sz-tab-container .sz-speaker__tagline,
+        .sz-timezone__name,
+        .sz-sessions--list .sz-session__title {
+            color: white !important;
+        }
+        .sz-timezone svg{
+            fill: white !important;
+        }
+    }
+}
+
+table { 
+    max-width:100vw;
+    overflow-y:scroll;
+    display: block;
+}
